# tradingClient

./: .gitignore  CMakeLists.txt  README.md
src/: Logger.cpp  Logger.hpp  MarketAPI.cpp  MarketAPI.hpp  NotificationHandler.cpp  NotificationHandler.hpp  WebSocketHandler.cpp  WebSocketHandler.hpp  main.cpp  main2.cpp
